--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<nav class="main-navigation">
 					<a ><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
 					<ul>
-						<li><a href="#">Каталог</a>
+						<li class="first-menu one-units"><a href="#">Каталог</a>
 							<ul class="sub-menu">
 								<li><a href="#">Новинки</a></li>
 								<li><a href="catalog.html">Сливочное</a></li>
@@ -26,8 +26,8 @@
 								<li><a href="#">Мелорин</a></li>
 							</ul>
 						</li>				
-						<li><a href="#">Доставка и оплата</a></li>
-						<li><a href="#">О Компании</a></li>
+						<li class="first-menu two-units"><a href="#">Доставка и оплата</a></li>
+						<li class="first-menu three-units"><a href="#">О Компании</a></li>
 					</ul>
 				</nav>
 				<div class="second-block">
@@ -145,8 +145,6 @@
 						</form>
 					</div>
 				</section>
-		
-		
 		<section class="about-us">
 		<h3>about-us</h3>
         <img src="img/map.jpg" width="1200" height="430" alt="MAP">
@@ -161,22 +159,28 @@
 						<p>(с 10 до 20 ежедневно)</p>
 						<p><a href="#" class="feedback-btn">Форма обратной связи</a></p>
 					</div>
-					<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-						<h2>Мы обязательно вам ответим!</h2>
-						<input type="text" name="name"  placeholder="Как вас зовут?">
-						<input type="email" name="email"  placeholder="Ваша почта для ответа?">
-						<textarea name="suggestions" placeholder="Напишите что нибудь"></textarea>
-						<input type="submit" name="submit" value="Отправить">
-					</form>
+					<div class="modal-content">
+						<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+						<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+							<b>Мы обязательно вам ответим!</b>
+							<label for="name">Как вас зовут?</label>
+							<input type="text" id="name" name="name"  placeholder="Как вас зовут?">
+							<label for="email">Ваша почта для ответа?</label>
+							<input type="email" id="email" name="email"  placeholder="Ваша почта для ответа?">
+							<label for="suggestions">Напишите что нибудь</label>
+							<textarea  id="suggestions" name="suggestions" id="suggestions" placeholder="Напишите что нибудь"></textarea>
+							<input type="submit" name="submit" value="Отправить">
+						</form>
+					</div>	
 		</section>
 		</main>
 		<footer class="main-footer">
 			<section class="footer-social">
 					<h3>social</h3>
-					<a class="social social-tw" href="#">Твитер</a>
-					<a class="social social-inst" href="#">Инстаграм</a>
-					<a class="social social-fb" href="#">Фейсбук</a>
-					<a class="social social-vk" href="#">Вконтакте</a>
+					<a class="social social-tw" href="https://twitter.com/?lang=ru" target="_blank">Твитер</a>
+					<a class="social social-inst" href="https://www.instagram.com/" target="_blank">Инстаграм</a>
+					<a class="social social-fb" href="https://www.facebook.com/" target="_blank">Фейсбук</a>
+					<a class="social social-vk" href="https://vk.com/feed" target="_blank">Вконтакте</a>
 				</section>
 				<div class="documentation-unit">
 					<a class="doc-item for-suppliers" href="#">Для поставщиков</a>
