--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="content-wrapper">
 			<header class="main-header">
 				<nav class="main-navigation">
-					<a ><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
+					<a class="index-logo"><img src="img/Logo.png" width="154" height="64" alt="Logo"></a>
 					<ul>
 						<li class="first-menu one-units"><a href="#">Каталог</a>
 							<ul class="sub-menu">
@@ -42,7 +42,7 @@
 						<div class="login-wrapper">
 							<a class="users login" href="#">Вход</a>
 							<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-								<input id="email" type="email" name="email">
+								<input class="login-email" id="email" type="email" name="email">
 								<label class="label-email" for="email">Электронная почта</label>
 								<input id="password "type="password" name="password">
 								<label class="label-password" for="password">Пароль</label>
